--- a/style.css
+++ b/style.css
@@ -60,7 +60,19 @@ img {
     max-width: 100%;
 }
 
-strong { font-weight: var(--fw-bold) }
+#text { font-weight: var(--fw-bold) }
+#cursor {
+    animation: blink 1s linear infinite;
+}
+
+@keyframes blink {
+    0%{
+        opacity: 100%;
+    }
+    50% {
+        opacity: 0%;
+    }
+}
 
 :focus {
     outline: 3px solid var(--clr-accent);
@@ -74,7 +86,7 @@ strong { font-weight: var(--fw-bold) }
     text-decoration: none;
     width: 60%;
     margin: 0 auto;
-    border: none;
+    border: 1px solid var(--clr-dark);
     cursor: pointer;
     display: block;
     position: relative;
@@ -88,26 +100,6 @@ strong { font-weight: var(--fw-bold) }
     border-radius: 20px;
     box-shadow: 0px 6px rgba(248, 128, 8, 0.968);    /*  Axa X --- Axa Y ---Culoare Umbra */
 }              
-/* .btn {
-    position: relative;
-    outline: none;
-    border: none;
-    display: inline-block;
-    padding: .5em 6em;
-    background: var(--clr-accent);
-    color: var(--clr-dark);
-    text-decoration: none;
-    cursor: pointer;
-    font-size: .9rem;
-    border-radius: 10px;
-    box-shadow: 0px -6px #eb5504; 
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    font-weight: var(--fw-bold);
-    transition: transform 200ms ease-in-out;
-} */
-
-
 .btn:hover {
     box-shadow: 0px 4px rgba(248, 128, 8, 0.968);
     top: 2px;
@@ -149,6 +141,7 @@ h3 { font-size: var(--fs-h3) }
 .section__subtitle {
     margin: 0;
     font-size: var(--fs-h3);
+    height: 50px;
 }
 
 
@@ -163,7 +156,6 @@ h3 { font-size: var(--fs-h3) }
 .section__subtitle--work {
     color: var(--clr-accent);
     font-weight: var(--fw-bold);
-    margin-bottom: 2em;
 }
 
 .service__skill {
@@ -300,6 +292,18 @@ font-size: var(--fs-h3);
         display: flex;
         
     }
+
+    .section__subtitle--intro {
+        width:100%;
+    }
+
+    .intro {
+      display: flex;
+      flex-direction: column;
+ 
+    }
+    
+
    
 
 }
@@ -335,7 +339,8 @@ font-size: var(--fs-h3);
         position: relative;
         z-index: 2;
     }    
-    
+
+
     .section__subtitle--intro {
         align-self: start;
         grid-column: -1 / 1;
@@ -345,6 +350,20 @@ font-size: var(--fs-h3);
         left: -1.5em;
         width: calc(100% + 1.5em);
     }
+
+   
+   
+}
+
+@media (min-width:500px) {
+    .intro__img{
+        width:400px ;
+        margin: 0 auto;
+    }
+    .btn {
+        width: 60%;
+    }
+       
 }
 
 
@@ -401,7 +420,7 @@ font-size: var(--fs-h3);
     }
 }
 
-/* about me*/
+/* who i am */
 .about-me {
     max-width: 1000px;
     margin: 0 auto;
@@ -409,9 +428,18 @@ font-size: var(--fs-h3);
 
 .about-me__img {
     box-shadow: var(--bs);
+    height: 60%;
+}
+
+.about-me__body{
+    font-family: var(--ff-primary)
 }
 
 @media (min-width: 600px) {
+    .btn {
+        font-size: 1rem;
+    }
+
     .about-me {
         display: grid;
         grid-template-columns: 1fr 30   0px;
@@ -435,10 +463,9 @@ font-size: var(--fs-h3);
         width: calc(100% + 2em);
         padding-left: 1em;
         padding-right: calc(200px + 4em);
+       
       
     }
-    
-    
     .about-me__img {
         grid-area: img;
         position: relative;
@@ -448,10 +475,7 @@ font-size: var(--fs-h3);
 }
 
 @media(max-width:600px) {
-    .about-me{
-     
-      background-color: #fff;
-    }
+  
    .about-me img{
         display: none;
        
@@ -461,15 +485,22 @@ font-size: var(--fs-h3);
        text-align: center;
     }
 
-    .section__subtitle--about {
-        text-align: center;
-    }
-    
+   
     a.btn {
       display: inline;
     }
+     .section__subtitle--about {
+        text-align: center
+    }
     
-     
+ }
+
+ @media(max-width:500px) {
+    .section__subtitle--about {
+        height: 80px;
+    }
+    
+    
  }
 
 /* My Work */
@@ -479,45 +510,6 @@ font-size: var(--fs-h3);
     color: var(--clr-accent);
     text-align: center;    
 }
-
-.portfolio {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 1px;
-}
-
-.portfolio__item {
-    background: transparent;
-    overflow: hidden;
-    text-decoration: none;
-}
-
-.portfolio__img {
-    transition: 
-        transform 750ms cubic-bezier(.5, 0, .5, 1),
-        opacity 250ms linear;
-}
-
-.portfolio__item:focus {
-    position: relative;
-    z-index: 2;
-}
-
-.portfolio__img:hover,
-.portfolio__item:focus .portfolio__img {
-    transform: scale(1.2);
-    opacity: .5;
-}
-
-.project__name{
-    background-color: var(--clr-accent);
-    text-decoration: none;
-    color: var(--clr-dark);
-    font-weight: var(--fw-bold);
-
-}
-
-
 /* footer */
 
 .footer {
@@ -592,6 +584,150 @@ font-size: var(--fs-h3);
     }
 }
 
+/*      Load more        */
 
-    
+.my-work {
+    background-color: var(--clr-dark);
+    color: var(--clr-accent);    
+    padding: 0.75em;
+    margin-bottom: 0;
+}
+
+
+/* footer */
+.container{
+    font-family: var(--ff-primary);
+    max-width: 1200px;
+    margin: 0 auto;
+    text-align: center;
+    padding:25px 20px;
+  }
   
+  .container .heading{
+    font-size:var(--fs-h2);
+    margin-bottom:1em;
+    color: var(--clr-accent); 
+
+  }
+  
+  .container .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    gap:20px;
+    
+  }
+  
+  .container .box-container .box{
+    background-color: var(--clr-light);
+    padding:20px;
+    border-radius: 5px;
+    border: 1px solid var(--clr-accent);
+    box-shadow: 0 5px 10px rgba(0,0,0,.2);
+    display: none;
+  }
+  
+  .container .box-container .box:nth-child(1),
+  .container .box-container .box:nth-child(2),
+  .container .box-container .box:nth-child(3){
+    display: inline-block;
+  }
+  
+  .container .box-container .box .image{
+    margin-bottom: 1em;
+    overflow: hidden;
+    height: 200px;
+    border-radius: 5px;
+  }
+  
+  .container .box-container .box .image img{
+    height: 100%;
+    width: 100%;
+    object-fit:contain;
+    filter: grayscale(100%);
+  }
+  
+  .container .box-container .box:hover .image img{
+    transform: scale(1.3);
+   filter: grayscale(0);
+  }
+  
+  .container .box-container .box .content h3{
+    font-size: 20px;
+    color:#334;
+  }
+  
+  .container .box-container .box .content p{
+    font-size: 15px;
+    color:#777;
+    line-height: 2;
+    padding:15px 0;
+    font-weight: var(--fw-bold);
+  }
+  
+  .container .box-container .box .content .btn{
+    display: inline-block;
+    padding:10px 30px;
+    border:1px solid #334;
+    color:#334;
+    font-size: 16px;
+  }
+  
+  .container .box-container .box .content .btn:hover{
+    background-color: var(--clr-dark);
+    border-color: var(--clr-dark);
+    color:#fff;
+  }
+  
+  
+  
+  #load-more{
+    margin-top: 2em;
+    display: inline-block;
+    padding:13px 30px;
+    border:1px solid #334;
+    color:#334;
+    font-family: var(--ff-primary);
+    font-weight: var(--fw-bold);
+    background-color: #fff;
+    font-size: 15px;
+    cursor: pointer;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+
+  }
+  
+  #load-more:hover{
+    background-color: var(--clr-accent);
+    border-color: var(--clr-accent);
+    color:#334;
+
+  }
+  
+  @media (max-width:450px){
+  
+    .container .heading{
+      font-size: 2em;
+    }
+  
+    .container .box-container{
+      grid-template-columns: 1fr;
+    }
+  
+    .container .box-container .box .image{
+      height: 200px;
+    }
+  
+    .container .box-container .box .content p{
+      font-size: 12px;
+    }
+  
+    .container .box-container .box .content .icons span{
+      font-size: 12px;
+    }
+
+    #load-more {
+        font-size: 12px;
+        letter-spacing: 0.1em;
+    }
+  
+  }
