--- a/css/portofolio-item2.css
+++ b/css/portofolio-item2.css
@@ -63,26 +63,6 @@ strong { font-weight: var(--fw-bold) }
     outline-offset: 3px;
 }
 
-/* Buttons */
-
-.btn {
-    display: inline-block;
-    padding: .5em 6em;
-    background: var(--clr-accent);
-    color: var(--clr-dark);
-    text-decoration: none;
-    cursor: pointer;
-    font-size: .9rem;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    font-weight: var(--fw-bold);
-    transition: transform 200ms ease-in-out;
-}
-
-.btn:hover {
-    transform: scale(1.1);
-}
-
 /* Typography */
 
 h1,
@@ -99,20 +79,18 @@ h3 { font-size: var(--fs-h3) }
 
 .section__title {
     margin-bottom: .25em;
+    text-align: center;
 }
 
 .section__title--intro {
     font-weight: var(--fw-reg);
 }
 
-.section__title--intro strong {
-    display: block;
- 
-}
 
 .section__subtitle {
     margin: 0;
     font-size: var(--fs-h3);
+    text-align: center;
 }
 
 
@@ -121,29 +99,6 @@ h3 { font-size: var(--fs-h3) }
     background: var(--clr-accent);
     padding: .25em 1em;
     font-family: var(--ff-secondary);
-    margin-bottom: 1em; 
-}
-
-.section__subtitle--work {
-    color: var(--clr-accent);
-    font-weight: var(--fw-bold);
-    margin-bottom: 2em;
-}
-
-.service__skill {
-    transition: all 0.5s ease-in-out;
-}
-
-.service__skill:hover {
-    color:var(--clr-accent);
-}
-
-.subservice {
-    transition: all 0.5s ease-in-out;
-}
-
-.subservice:hover {
-    color: var(--clr-accent);
 }
 
 /*NAVIGATION*/
@@ -155,7 +110,6 @@ h3 { font-size: var(--fs-h3) }
     align-items: center;
     background: var(--clr-dark);
     color: var(--clr-light);
- 
 }
 
 .brand-title-doi,
@@ -177,8 +131,6 @@ h3 { font-size: var(--fs-h3) }
 .navbar-links li {
     list-style: none;
     transition: .5s;
-
-
 }
 
 .navbar-links li a {
@@ -191,12 +143,9 @@ font-size: var(--fs-h3);
 
 .navbar-links li:hover {
     background-color: #fd6717;
-    
-    
 }
 
 
-  
 .toggle-button {
     position: absolute;
     top: .75rem;
@@ -222,7 +171,6 @@ font-size: var(--fs-h3);
         flex-direction: column;
         align-items: flex-start;
         justify-content: center;
-        
     }
     
     .brand-title-doi {
@@ -236,26 +184,18 @@ font-size: var(--fs-h3);
     .navbar-links {
         display: none;
         width: 100%;
-        
-       
     }
-
 
     .navbar-links ul {
         width: 100%;
         flex-direction: column;
-     
-
     }
 
     .navbar-links ul li {
         margin-top: 20px;
         transition: all .5s ease;
         text-align: center;
-       
-    
     }
-
     .navbar-links ul li a {
         padding: .5rem 1rem;
         display: block;
@@ -263,60 +203,99 @@ font-size: var(--fs-h3);
 
     .navbar-links.active {
         display: flex;
-
     }
 
-    img {
-        border-radius: 0;
-    }
 
 }
+
 
 /*  Intro section  */
 
-.intro {
-    position: relative;
-}
-
-.intro__img {
-    box-shadow: var(--bs);
-}
-
-.section__subtitle--intro {
-    display: inline-block;
-}
-
-@media (min-width: 600px) {
-    .intro {
-        display: grid;
-        width: min-content;
-        margin: 0 auto;
-        grid-column-gap: 1em;
-        grid-template-areas: 
-            "img title"
-            "img subtitle";
-        grid-template-columns: min-content max-content;
-    }
-    
-    .intro__img {
-        grid-area: img;
-        min-width: 250px;
-        position: relative;
-        z-index: 2;
-    }    
-    
+@media (min-width: 400px) {
     .section__subtitle--intro {
-        align-self: start;
-        grid-column: -1 / 1;
-        grid-row: 2;
-        text-align: right;
-        position: relative;
-        left: -1.5em;
-        width: calc(100% + 1.5em);
+        width: 100%;
+        margin: 0 auto;
+       
+        
     }
 }
 
-/* footer */
+/*  MAIN  */
+
+.main {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    width:80%;
+    margin-top: -1em;
+    margin-bottom: 2em;
+}
+
+.main--description {
+    display: flex;
+    justify-content: space-between;
+    background-color: rgb(243, 232, 253);
+    font-size: 1.1em;
+}
+
+.main--img {
+    width: 38%;
+    position: relative;
+
+
+}
+
+.main--img div{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background: black;
+    text-align: center;
+    color: white;
+    margin-bottom: 5px;
+    font-family: sans-serif;
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transition: visibility 0s, opacity 0.5s linear; 
+    transition: visibility 0s, opacity 0.5s linear;
+   }
+   
+   /* Hover on Parent Container */
+   .main--img:hover div{
+    width: 150px;
+    padding: 8px 15px;
+    visibility: visible;
+    opacity: 0.7; 
+    cursor: pointer;
+    
+   }
+.main--description--info {
+    width: 60%;
+    padding: 2em;
+}
+
+.preview--link {
+    color: white;
+    text-decoration: none;
+}
+
+.main--recipe {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fd6717;
+}
+
+.main--recipe ul {
+    font-family: var(--ff-secondary);
+    list-style-type: square;
+    display: flex;
+}
+
+.main--recipe ul li {
+    margin-left: 30px;
+}
+/* FOOTER  */
 
 .footer {
     background: #111;
@@ -358,89 +337,51 @@ font-size: var(--fs-h3);
 .social-list__link {
     padding: .5em;
 }
-/* Main*/
-.main {
-    margin: 0 auto;
-    width:70%;
-    display: grid;
-    grid-template-columns:1fr 1fr 1fr;
-    grid-gap: 1em;
-    margin-bottom: 2em;
-}
 
-/* Parent Container pic*/
-.content_img{
+
+@media (max-width:800px){
+    .intro {
+        display: flex;
+      
+    }
+
+    .main--description{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    
+    }
+    .main--description h2    {
+        text-align: center;
+    }
+
+    .main--description--info {
+        width: 100%;
+    }
+
+    .main--img {
+        width: 100%;
+        margin-top: -2em;
+        
+    }
+
+    .intro {
     position: relative;
-   grid-column: 1/4;
-   }
-   
-   /* Child Text Container pic */
-   .content_img div{
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    background: black;
-    color: white;
-    margin-bottom: 5px;
-    font-family: sans-serif;
-    opacity: 0;
-    visibility: hidden;
-    -webkit-transition: visibility 0s, opacity 0.5s linear; 
-    transition: visibility 0s, opacity 0.5s linear;
-
-   }
-   
-   /* Hover on Parent Container */
-   .content_img:hover{
-    cursor: pointer;
-   }
-   
-   .content_img:hover div{
-    width: 150px;
-    padding: 8px 15px;
-    visibility: visible;
-    opacity: 0.7; 
-   }
-   
-.main__description {
-    padding: 0 1em;
-    background-color: #eee;
-    grid-column: 1/3;
-    font-size: var(--ff-primary);
-   text-align: center;
-   border: 5px  #fd6717;
-   border-radius: 30px;
-   box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
-}
-
-.main__description h3 {
-    margin-top: 1em;
-} 
-
-.main__programs {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: #fd6717;
-    border: 5px  #fd6717;
-    border-radius: 30px;
-    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
-    min-height:150px;
-    max-height: 300px;
-    font-size: var(--ff-primary);
-    color:var(--clr-dark) ;
-    font-weight: var(--fw-bold);
-    letter-spacing: 1px;
-    text-transform: uppercase;
 }
 
 
 
-.main__programs-subtitle{
-    margin-top: 1em;
-    text-align: center;
+
+@media (min-width: 600px) {
+  
+    .section__subtitle--intro {
+        align-self: start;
+        grid-column: -1 / 1;
+        grid-row: 2;
+        left: -1.5em;
+    }
 }
+
 
 @media (max-width:900px){
     .intro {
@@ -448,55 +389,15 @@ font-size: var(--fs-h3);
         flex-direction: column;
     }
 
-    .intro__img{
-        width:250px;
-        height: 250px;
-        margin: 0 auto;
-    }
 
    .main {  
        display: flex;
-       width: 100vw;
+       width: 90%;
        flex-direction: column;
        
    }
 
-   .main__description {
-    position: relative;
-     justify-content: center;
-     align-items: center;
-     width: 85%;
-     margin: 0 auto;
 
-   }
-   .main__programs {
-       margin:0 auto;
-       position: relative;
-       width: 80%;
-       justify-content: space-evenly;
-       align-items: center;
-       text-align: center;
-       flex-direction: row;
-   }
-
-   img{
-    border-radius: 0;
-   }
-   
-   #cook {
-    display: none;
-   }
-   .main__programs ul{  
-    text-align: start;
-   }
 
 }
-
-#cook{
-    margin-top: 1em;
-    opacity: 0.9;
-    margin-bottom: 1em;
-    position:relative;
-    width: 80px;
-    border-radius: 50%;
 }
